--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "colors": "^1.4.0",
+    "express": "^4.18.2",
+    "moment": "^2.30.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3"
   }
 }
