no more config.json

--- a/example.config.json
+++ b/example.config.json
@@ -9,6 +9,9 @@
     },
 
     "db": {
-        
+        "host": "127.0.0.1",
+        "user": "altnnas",
+        "pass": "altnnas",
+        "name": "altnnas-db"
     }
 }
