--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "body-parser-xml": "^2.0.5",
     "colors": "^1.4.0",
     "express": "^4.18.2",
-    "moment": "^2.30.1"
+    "knex": "^3.1.0",
+    "moment": "^2.30.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
