--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "colors": "^1.4.0",
     "express": "^4.18.2",
     "knex": "^3.1.0",
+    "module-alias": "^2.2.3",
     "moment": "^2.30.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "xmlbuilder": "^15.1.1"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
