--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.20.2",
     "body-parser-xml": "^2.0.5",
     "colors": "^1.4.0",
+    "crypto-random-string": "^5.0.0",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "knex": "^3.1.0",
