--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "module-alias": "^2.2.3",
     "moment": "^2.30.1",
     "mysql": "^2.18.1",
+    "node-rsa": "^1.1.1",
     "xmlbuilder": "^15.1.1"
   }
 }
