(feat/chore) /v1/api/people/@me/profile (unfinished), /v1/api/oauth20/access_token/generate now includes which device generated the token, bcrypt password hashes (bye sha256!), /v1/api/people/@me/miis/@primary, fixed a few bugs iirc

--- a/example.config.json
+++ b/example.config.json
@@ -19,6 +19,7 @@
 
     "encryption_keys": {
         "_comment": "First value is the AES-256 key, second is the AES-256 IV",
-        "service_token": [ "aes256encryptionkey", "aes256encryptioniv" ]
+        "service_token": [ "aes256encryptionkey", "aes256encryptioniv" ],
+        "saltRounds": 12
     }
 }
